@@ -32,6 +32,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #4574: fix a crash in io.IncrementalNewlineDecoder when a carriage
+  return encodes to more than one byte in the source encoding (e.g. UTF-16)
+  and gets split on a chunk boundary.
+
 - Issue #4223: inspect.getsource() will now correctly display source code
   for packages loaded via zipimport (or any other conformant PEP 302
   loader). Original patch by Alexander Belopolsky.
